--- a/articles/automation/index.yml
+++ b/articles/automation/index.yml
@@ -14,11 +14,11 @@ metadata:
   ms.topic: landing-page
   ms.date: 12/13/2017
   ms.author: gwallace
-  ms.openlocfilehash: f6f3485929f2fd607e31cc7178c32f7cba7818c6
-  ms.sourcegitcommit: a648f9d7a502bfbab4cd89c9e25aa03d1a0c412b
+  ms.openlocfilehash: b2b155480cd43ce8daa0b4916b244910f094a032
+  ms.sourcegitcommit: c4cc4d76932b059f8c2657081577412e8f405478
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 12/22/2017
+  ms.lasthandoff: 01/11/2018
 abstract:
   description: "Lär dig hur du använder Automation för att konfigurera och automatisera åtgärdsuppgifter i en hybridmiljö. Självstudier, API-referenser och annan dokumentation visar hur du kan automatisera processer, utföra uppdateringshantering, leverera önskad tillståndskonfiguration, spåra ändringar och samla inventering."
 sections:
@@ -40,7 +40,7 @@ sections:
     - image:
         src: /azure/automation/media/index/dscconfig.svg
       text: Skapa en DSC-konfiguration
-      href: /azure/automation/automation-quickstart-dsc-config
+      href: /azure/automation/automation-quickstart-dsc-configuration
 - title: "Steg för steg-självstudier"
   items:
   - type: paragraph
@@ -53,27 +53,6 @@ sections:
     - html: <a href="/azure/automation/automation-onboard-solutions">Publicera i skala</a>
     - html: "<a href=\"/azure/automation/automation-tutorial-installed-software\">Identifiera program installerade på en virtuell dator</a>"
     - html: "<a href=\"/azure/automation/automation-tutorial-troubleshoot-changes\">Felsök ändringar på en virtuell dator</a>"
-- title: "Kostnadsfri videoutbildning för Pluralsight"
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
-    items:
-    - title: "Komma igång med Azure Automation"
-      href: https://app.pluralsight.com/library/courses/azure-automation-getting-started/table-of-contents
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/azure-automation-getting-started/table-of-contents
-    - title: Hantera konfigurationer med Azure Automation DSC
-      href: https://app.pluralsight.com/library/courses/azure-automation-dsc-managing-configurations/table-of-contents
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/azure-automation-dsc-managing-configurations/table-of-contents
-    - title: 'Play by Play: Elastisk skalning och konsekvens med Azure Automation DSC'
-      href: https://app.pluralsight.com/library/courses/play-by-play-azure-automation-dsc-elastic-scale-consistency/table-of-contents
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/play-by-play-azure-automation-dsc-elastic-scale-consistency/table-of-contents
 - title: Referens
   items:
   - type: list
@@ -83,6 +62,6 @@ sections:
     - title: Kommandorad
       html: <p><a href="/powershell/module/azurerm.automation">PowerShell</a></p>
     - title: "Språk"
-      html: <p><a href="/dotnet/api/microsoft.azure.management.automation">NET</a></p>
+      html: <p><a href="/dotnet/api/microsoft.azure.management.automation">.NET</a></p>
     - title: REST
       html: <p><a href="/rest/api/automation">Automation REST API</a></p>
