--- a/articles/hdinsight/hadoop/TOC.yml
+++ b/articles/hdinsight/hadoop/TOC.yml
@@ -256,9 +256,15 @@
           href: ../hdinsight-hadoop-manage-ambari.md
           maintainContext: true
           items:
+            - name: Optimera kluster med Ambari-webbgränssnittet
+              href: ../hdinsight-changing-configs-via-ambari.md
+              maintainContext: true
             - name: Använda Ambari REST API
               href: ../hdinsight-hadoop-manage-ambari-rest-api.md
               maintainContext: true
+        - name: Hantera loggar för ett HDInsight-kluster
+          href: ../hdinsight-log-management.md
+          maintainContext: true
         - name: Lägga till lagringskonton
           href: ../hdinsight-hadoop-add-storage.md
           maintainContext: true
@@ -304,6 +310,9 @@
       href: ../hdinsight-troubleshoot-guide.md
       maintainContext: true
       items:
+        - name: Felsöka ett långsamt eller felaktigt HDInsight-kluster
+          href: ../hdinsight-troubleshoot-failed-cluster.md
+          maintainContext: true
         - name: Felsökning för HDFS
           href: ../hdinsight-troubleshoot-hdfs.md
           maintainContext: true
