--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -29,7 +29,7 @@
           href: container-registry-tutorial-deploy-app.md
         - name: 3 – Uppdatera webbprogrammet
           href: container-registry-tutorial-deploy-update.md
-- name: Koncept
+- name: Begrepp
   items:
     - name: 'SKU:er för Container Registry'
       href: container-registry-skus.md
@@ -44,13 +44,17 @@
     - name: Visa lagringsplatser
       href: container-registry-repositories.md
     - name: Skapa ett huvudnamn för tjänsten
-      href: ../azure-resource-manager/resource-group-create-service-principal-portal.md?toc=%2fazure%2fcontainer-registry%2ftoc.json
-    - name: Autentisera med ett register
-      href: container-registry-authentication.md
+      href: ../azure-resource-manager/resource-group-create-service-principal-portal.md?toc=%2fazure%2fcontainer-registry%2ftoc.jso
     - name: Uppgradera ett klassiskt register
       href: container-registry-upgrade.md
     - name: Använda ACR-webhooks
       href: ./container-registry-webhook.md
+    - name: Autentisering
+      items:
+        - name: Översikt över autentisering
+          href: container-registry-authentication.md
+        - name: Azure Container Service
+          href: ./container-registry-auth-aks.md
 - name: Referens
   items:
     - name: Azure CLI
