--- a/articles/hdinsight/hbase/TOC.yml
+++ b/articles/hdinsight/hbase/TOC.yml
@@ -29,6 +29,8 @@
           maintainContext: true
     - name: Utveckla
       items:
+        - name: Använda SDK för HBase
+          href: apache-hbase-rest-sdk.md
         - name: Utveckla Java-program
           href: apache-hbase-build-java-maven-linux.md
         - name: Använda tomma kantnoder
@@ -39,6 +41,8 @@
           maintainContext: true
         - name: Använd Phoenix och SQLLine
           href: apache-hbase-phoenix-squirrel-linux.md
+        - name: Använda REST SDK för Phoenix Query Server
+          href: apache-hbase-using-phoenix-query-server-rest-sdk.md
     - name: Utöka kluster
       items:
         - name: Anpassa kluster med Bootstrap
@@ -112,9 +116,15 @@
           href: ../hdinsight-hadoop-manage-ambari.md
           maintainContext: true
           items:
+            - name: Optimera kluster med Ambari-webbgränssnittet
+              href: ../hdinsight-changing-configs-via-ambari.md
+              maintainContext: true
             - name: Använda Ambari REST API
               href: ../hdinsight-hadoop-manage-ambari-rest-api.md
               maintainContext: true
+        - name: Hantera loggar för ett HDInsight-kluster
+          href: ../hdinsight-log-management.md
+          maintainContext: true
         - name: Lägga till lagringskonton
           href: ../hdinsight-hadoop-add-storage.md
           maintainContext: true
@@ -154,6 +164,9 @@
       href: ../hdinsight-troubleshoot-guide.md
       maintainContext: true
       items:
+        - name: Felsöka ett långsamt eller felaktigt HDInsight-kluster
+          href: ../hdinsight-troubleshoot-failed-cluster.md
+          maintainContext: true
         - name: Felsökning för HDFS
           href: ../hdinsight-troubleshoot-hdfs.md
           maintainContext: true
