--- a/articles/hdinsight/r-server/TOC.yml
+++ b/articles/hdinsight/r-server/TOC.yml
@@ -11,6 +11,9 @@
   items:
     - name: Börja med R Server
       href: r-server-get-started.md
+    - name: Installera HDInsight-appar
+      href: ../hdinsight-apps-install-applications.md
+      maintainContext: true
     - name: Kapacitetsplanering för kluster
       href: ../hdinsight-capacity-planning.md
       maintainContext: true
@@ -43,17 +46,11 @@
           maintainContext: true
     - name: Utöka kluster
       items:
-        - name: 'Använda ett säkert, aktiverat lagringskonto'
-          href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
-          maintainContext: true
         - name: Anpassa kluster med Bootstrap
           href: ../hdinsight-hadoop-customize-cluster-bootstrap.md
           maintainContext: true
         - name: Anpassa kluster med skriptåtgärd
           href: ../hdinsight-hadoop-customize-cluster-linux.md
-          maintainContext: true
-        - name: Ansluta HDInsight till det lokala nätverket
-          href: ../connect-on-premises-network.md
           maintainContext: true
         - name: Utveckla skriptåtgärder
           href: ../hdinsight-hadoop-script-actions-linux.md
@@ -79,9 +76,6 @@
         - name: Använd Solr
           href: ../hdinsight-hadoop-solr-install-linux.md
           maintainContext: true
-        - name: Använd Virtual Network
-          href: ../hdinsight-extend-hadoop-virtual-network.md
-          maintainContext: true
         - name: Använd Zeppelin
           href: ../hdinsight-apache-spark-zeppelin-notebook.md
           maintainContext: true
@@ -90,9 +84,6 @@
           maintainContext: true
         - name: Skapa HDInsight-program
           items:
-            - name: Installera HDInsight-appar
-              href: ../hdinsight-apps-install-applications.md
-              maintainContext: true
             - name: Installera anpassade appar
               href: ../hdinsight-apps-install-custom-applications.md
               maintainContext: true
@@ -159,9 +150,15 @@
           href: ../hdinsight-hadoop-manage-ambari.md
           maintainContext: true
           items:
+            - name: Optimera kluster med Ambari-webbgränssnittet
+              href: ../hdinsight-changing-configs-via-ambari.md
+              maintainContext: true
             - name: Använda Ambari REST API
               href: ../hdinsight-hadoop-manage-ambari-rest-api.md
               maintainContext: true
+        - name: Hantera loggar för ett HDInsight-kluster
+          href: ../hdinsight-log-management.md
+          maintainContext: true
         - name: Lägga till lagringskonton
           href: ../hdinsight-hadoop-add-storage.md
           maintainContext: true
@@ -203,24 +200,13 @@
         - name: OS-korrigering för HDInsight-kluster
           href: ../hdinsight-os-patching.md
           maintainContext: true
-    - name: Övervaka
-      items:
-        - name: Använda Azure Log Analytics
-          href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
-          maintainContext: true
-        - name: Klusterspecifika instrumentpaneler
-          href: ../hdinsight-hadoop-oms-log-analytics-management-solutions.md
-          maintainContext: true
-        - name: Använda frågor med Log Analytics
-          href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
-          maintainContext: true
-        - name: Övervaka klusterprestanda
-          href: ../hdinsight-key-scenarios-to-monitor.md
-          maintainContext: true
     - name: Felsöka
       href: ../hdinsight-troubleshoot-guide.md
       maintainContext: true
       items:
+        - name: Felsöka ett långsamt eller felaktigt HDInsight-kluster
+          href: ../hdinsight-troubleshoot-failed-cluster.md
+          maintainContext: true
         - name: Felsökning för HDFS
           href: ../hdinsight-troubleshoot-hdfs.md
           maintainContext: true
@@ -256,6 +242,33 @@
             - name: Optimera Hive-frågor
               href: ../hdinsight-hadoop-optimize-hive-query.md
               maintainContext: true
+- name: Företagsberedskap
+  items:
+    - name: Skydda data
+      href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
+      maintainContext: true
+    - name: Nätverksåtkomst
+      items:
+        - name: HDInsight i ett virtuellt Azure-nätverk
+          href: ../hdinsight-extend-hadoop-virtual-network.md
+          maintainContext: true
+        - name: Ansluta HDInsight till det lokala nätverket
+          href: ../connect-on-premises-network.md
+          maintainContext: true
+    - name: Övervaka med OMS
+      items:
+        - name: Använda Azure Log Analytics
+          href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
+          maintainContext: true
+        - name: Klusterspecifika instrumentpaneler
+          href: ../hdinsight-hadoop-oms-log-analytics-management-solutions.md
+          maintainContext: true
+        - name: Använda frågor med Log Analytics
+          href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
+          maintainContext: true
+        - name: Övervaka klusterprestanda
+          href: ../hdinsight-key-scenarios-to-monitor.md
+          maintainContext: true
 - name: Referens
   items:
     - name: Kodexempel
