--- a/articles/iot-edge/index.yml
+++ b/articles/iot-edge/index.yml
@@ -12,13 +12,13 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 12/08/2017
+  ms.date: 01/08/2018
   ms.author: kgremban
-  ms.openlocfilehash: 909df13481d6bc47e0b7d30eb9f1ef755df01d27
-  ms.sourcegitcommit: aaba209b9cea87cb983e6f498e7a820616a77471
+  ms.openlocfilehash: e95adf14c91ff61c79eb038f921da7112165e282
+  ms.sourcegitcommit: 48fce90a4ec357d2fb89183141610789003993d2
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 12/12/2017
+  ms.lasthandoff: 01/12/2018
 abstract:
   description: "Azure IoT Edge är en tjänst för Sakernas Internet (IoT) som bygger på IoT Hub. Den här tjänsten är avsedd för kunder som vill analysera data på enheter, dvs. ”vid gränsen”, i stället för i molnet. När delar av din arbetsbelastning flyttas till Edge kan dina enheter ägna mindre tid åt att skicka meddelanden till molnet och i stället reagera snabbare på tillståndsändringar."
 sections:
@@ -34,8 +34,12 @@ sections:
       text: Windows
       href: /azure/iot-edge/quickstart
     - image:
-        src: https://docs.microsoft.com/media/logos/logo_linux.svg
+        src: https://docs.microsoft.com/media/logos/logo_linux-color.svg
       text: Linux
+      href: /azure/iot-edge/quickstart-linux
+    - image:
+        src: https://docs.microsoft.com/media/logos/logo_macos.svg
+      text: Mac
       href: /azure/iot-edge/quickstart-linux
 - title: "Steg för steg-självstudier"
   items:
@@ -45,7 +49,7 @@ sections:
     style: ordered
     items:
     - html: <a href="/azure/iot-edge/tutorial-simulate-device-windows">Simulera en IoT Edge-enhet i Windows</a>
-    - html: <a href="/azure/iot-edge/tutorial-simulate-device-Linux">Simulera en IoT Edge-enhet i Linux</a>
+    - html: <a href="/azure/iot-edge/tutorial-simulate-device-Linux">Simulera en IoT Edge-enhet i Linux eller MacOS</a>
     - html: <a href="/azure/iot-edge/tutorial-csharp-module">Utveckla och distribuera en C#-modul</a>
     - html: <a href="/azure/iot-edge/tutorial-deploy-stream-analytics">Distribuera Azure Stream Analytics som en modul</a>
     - html: <a href="/azure/iot-edge/tutorial-deploy-machine-learning">Distribuera Azure Machine Learning som en modul</a>
