--- a/articles/azure-stack/TOC.yml
+++ b/articles/azure-stack/TOC.yml
@@ -233,9 +233,9 @@
               href: azure-stack-supported-os.md
             - name: Lägg till en anpassad avbildning av virtuell dator
               href: azure-stack-add-vm-image.md
-            - name: Lägg till skalningsuppsättningar för virtuell dator
+            - name: Erbjuder en skaluppsättning för virtuell dator
               href: azure-stack-compute-add-scalesets.md
-            - name: Distribuera virtuella Linux-datorer
+            - name: Erbjudande virtuella Linux-datorer
               href: azure-stack-linux.md
         - name: Användning och fakturering
           items:
