--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -1,6 +1,6 @@
 - name: Azure Storage-dokumentation
   href: /azure/storage/
-- name: Översikt
+- name: "Översikt\r\n"
   items:
     - name: Introduktion
       href: storage-blobs-introduction.md
@@ -190,8 +190,6 @@
           href: storage-how-to-use-blobs-powershell.md
         - name: Azure CLI 2.0
           href: storage-how-to-use-blobs-cli.md
-        - name: REST
-          href: ../common/storage-rest-api-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Hantera
       items:
         - name: PowerShell för Azure Storage
