--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -1,4 +1,4 @@
-- name: Översikt
+- name: "Översikt\r\n"
   items:
     - name: Introduktion
       href: storage-files-introduction.md
@@ -66,8 +66,6 @@
               href: ../common/storage-samples-java.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Konfigurera anslutningssträngar
           href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: Använda Azure Storage REST API
-          href: ../common/storage-rest-api-auth.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Hantera
       items:
         - name: PowerShell för Azure Files
