--- a/articles/azure-stack/TOC.yml
+++ b/articles/azure-stack/TOC.yml
@@ -128,6 +128,8 @@
           href: azure-stack-manage-storage-shares.md
         - name: Hantera virtuella Windows Azure Pack-datorer
           href: azure-stack-manage-windows-azure-pack.md
+        - name: Starta och stoppa Azure Stack
+          href: azure-stack-start-and-stop.md
         - name: Ersätta maskinvara
           items:
             - name: Noden åtgärder
